 - Add simple wrapper for ufl.cell.n. FacetNormal(mesh) now works again in Python.
 - Support apply(A), apply(b) and apply(b, x) in PeriodicBC
 - Enable setting spectral transformation for SLEPc eigenvalue solver
0.9.4 [2009-10-12]
 - Remove set, get and operator() methods from MeshFunction
 - Added const and none const T &operator[uint/MeshEntity] to MeshFunction
 - More clean up in SWIG interface files, remove global renames and ignores
 - Update Python interface to Expression, with extended tests for value ranks
 - Removed DiscreteFunction class
 - Require value_shape and geometric_dimension in Expression
 - Introduce new class Expression replacing user-defined Functions
 - interpolate_vertex_values --> compute_vertex_values
 - std::map<std::string, Coefficient> replaces generated CoefficientSet code
 - Cleanup logic in Function class as a result of new Expression class
 - Introduce new Coefficient base class for form coefficients
 - Replace CellSize::min,max by Mesh::hmin,hmax
 - Use MUMPS instead of UMFPACK as default direct solver in both serial and parallel
 - Fix bug in SystemAssembler
 - Remove support for PETSc 2.3 and support PETSc 3.0.0 only
 - Remove FacetNormal Function. Use UFL facet normal instead.
 - Add update() function to FunctionSpace and DofMap for use in adaptive mesh refinement
 - Require mesh in constructor of functionals (C++) or argument to assemble (Python)
0.9.3 [2009-09-25]
 - Add global parameter "ffc_representation" for form representation in FFC JIT compiler
 - Make norm() function handle both vectors and functions in Python
 - Speedup periodic boundary conditions and make work for mixed (vector-valued) elements
 - Add possibilities to use any number numpy array when assigning matrices and vectors
 - Add possibilities to use any integer numpy array for indices in matrices and vectors
 - Fix for int typemaps in PyDOLFIN
 - Split mult into mult and transpmult
 - Filter out PETSc argument when parsing command-line parameters